[tool.poetry]
name = "yattoite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.1"
slack-bolt = "^1.9.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
markovify = "^0.9.3"
slack-sdk = "^3.11.2"
ja-ginza = "^5.0.0"
ginza = "^5.0.3"
pandas = "^1.3.4"
swifter = "^1.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
